--- a/angular.json
+++ b/angular.json
@@ -3,11 +3,14 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "SGSST-FRONTEND": {
+    "sistema": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        },
+        "@schematics/angular:application": {
+          "strict": true
         }
       },
       "root": "",
@@ -17,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/SGSST-FRONTEND",
+            "outputPath": "dist/sistema",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,13 +53,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
                 }
               ]
             }
@@ -65,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "SGSST-FRONTEND:build"
+            "browserTarget": "sistema:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "SGSST-FRONTEND:build:production"
+              "browserTarget": "sistema:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "SGSST-FRONTEND:build"
+            "browserTarget": "sistema:build"
           }
         },
         "test": {
@@ -113,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "SGSST-FRONTEND:serve"
+            "devServerTarget": "sistema:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "SGSST-FRONTEND:serve:production"
+              "devServerTarget": "sistema:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "SGSST-FRONTEND"
+  "defaultProject": "sistema"
 }
