--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "affe9ede-71d5-4080-908a-9f73ce7da7a8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
